--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ uvloop = "^0.20.0"
 pyjwt = "^2.9.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 sqlalchemy = "^2.0.35"
+bcrypt = "4.0.1"
 
 
 [build-system]
